--- a/Code_3/gauss_filter.ipynb
+++ b/Code_3/gauss_filter.ipynb
@@ -406,6 +406,20 @@
     "plt.imshow(res.astype(np.uint8))\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Grayscale"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
