--- a/Code_3/gauss_filter.ipynb
+++ b/Code_3/gauss_filter.ipynb
@@ -419,7 +419,53 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import cupy as cp\n",
+    "import numpy as np\t#This is to deal with numbers and arrays\n",
+    "import cv2 as cv\t#This is to deal with images\n",
+    "from matplotlib import pyplot as plt\n",
+    "\n",
+    "def Histogram_Computation(Image):\n",
+    "    Image_Height = Image.shape[0]\n",
+    "    Image_Width = Image.shape[1]\n",
+    "    print(Image_Width)\n",
+    "    \n",
+    "    # Convert the image to a CuPy array\n",
+    "    Image_cp = cp.asarray(Image)\n",
+    "    \n",
+    "    # Compute the histogram using CuPy\n",
+    "    Histogram, _ = cp.histogram(Image_cp, bins=256, range=(0, 256))\n",
+    "    \n",
+    "    # Convert the histogram back to a NumPy array\n",
+    "    Histogram = cp.asnumpy(Histogram)\n",
+    "    \n",
+    "    return Histogram\n",
+    "\n",
+    "\n",
+    "def Plot_Histogram(Histogram):\n",
+    "\tplt.figure()\n",
+    "\tplt.title(\"GrayScale Histogram\")\n",
+    "\tplt.xlabel(\"Intensity Level\")\n",
+    "\tplt.ylabel(\"Intensity Frequency\")\n",
+    "\tplt.xlim([0, 256])\n",
+    "\tplt.plot(Histogram)\n",
+    "\tplt.savefig(\"Histogram_GrayScale.jpg\")\n",
+    "\n",
+    "def main():\n",
+    "\tInput_Image = cv.imread(\"Test_Image.png\",0) # This is to read Gray Scale Image\n",
+    "\t\n",
+    "\tHistogram_GrayScale = Histogram_Computation(Input_Image)\n",
+    "\t\n",
+    "\t#Now to print our output Histogram\n",
+    "\tfor i in range(0,len(Histogram_GrayScale)):\n",
+    "\t\tprint(\"Histogram[\",i,\"]: \", Histogram_GrayScale[i])\n",
+    "\tPlot_Histogram(Histogram_GrayScale)\n",
+    "\tinput(\"Please Enter to Continue...\")\n",
+    "\t\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "\tmain()"
+   ]
   }
  ],
  "metadata": {
